--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "react-entrega-s2-kenzie-hub-brunnomiguel",
+  "name": "kenzie-hub-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^2.8.8",
-    "@mui/material": "^5.7.0",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^2.9.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.31.1",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "5",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
+    "components": "^0.1.0",
+    "framer-motion": "^10.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.3.2",
-    "react-toastify": "^9.0.1",
-    "styled-components": "^5.3.5",
+    "styled": "^1.0.0",
+    "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
